[package]
name = "h"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "2.1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-cors = "0.6.1"
url = "2.2.2"
serde = { version = "1.0.152", features = ["derive"] }
futures = "0.3"
actix-web-lab = "0.18.9"
once_cell = "1.17.0"